Add production deployment docs
Also refines scaling docs, and adds backup and upgrading guides. These will likely need refinement as users try to make sense of them, but it's a starting point, and better what we had previously (i.e. nothing).

Signed-off-by: nscuro <nscuro@protonmail.com>