@@ -1,44 +1,28 @@
 # Scaling
 
-Dependency-Track requires only PostgreSQL for coordination. Scaling involves
-adding instances, splitting workloads, and tuning concurrency.
+This guide assumes the deployment already follows the baseline in
+[Deploying to production](deploying-to-production.md): more than one instance, shared file storage, a tuned
+PostgreSQL, and observability in place. It covers tuning that baseline under load.
 
-## Horizontal scaling
+## Separate API traffic from background work
 
-Deploy multiple instances pointing at the same database. No additional
-infrastructure (message brokers, caches, etc.) is needed.
+By default, every instance serves API traffic **and** runs background workers. As the cluster grows,
+request-path latency starts to suffer when background spikes (BOM imports, vulnerability mirroring) saturate
+worker threads on the same node.
 
-Work distribution is handled by the embedded
-[durable execution engine](../../concepts/architecture/design/durable-execution.md).
-All work is distributed across the cluster automatically; single-instance
-operations (scheduling, maintenance) are handled via leader election.
-
-### File storage
-
-When running multiple instances, all nodes must have access to the same
-[file storage](../../reference/configuration/file-storage.md). The `local` provider works well
-with a shared persistent volume (for example, NFS). For environments where shared volumes
-are impractical, the `s3` provider is available.
-
-## Web and worker separation
-
-By default, every instance serves API traffic **and** runs background workers.
-The `web` config profile disables all background processing, turning an instance
-into an API-only node. Activate it via [`dt.config.profile`](../../reference/configuration/properties.md#dtconfigprofile):
+Activate the `web` profile on instances that should serve API traffic only via
+[`dt.config.profile`](../../reference/configuration/properties.md#dtconfigprofile):
 
 ```ini linenums="1"
 dt.config.profile=web
 ```
 
-This results in two logical node types:
-
-- **Web**: API only. Lightweight. Scale based on request volume.
-- **Worker**: Background processing. Scale based on demand.
+Instances without the profile keep their default behavior and run background workers.
 
 !!! note
-    At least one worker node must be running at all times.
-    Workers handle scheduling, vulnerability analysis, notifications, and other
-    background tasks that the system depends on.
+    At least one worker node must run for scheduling, vulnerability analysis, notifications, and other
+    background work to make progress. Run **at least two worker nodes** in production so a single instance
+    failure does not stop background processing entirely.
 
 ### Example
 
@@ -60,139 +44,98 @@ services:
       DT_DATASOURCE_PASSWORD: "dtrack"
 ```
 
-## Concurrency control
+Scale the two groups independently: `web` based on request volume, `worker` based on background workload depth.
 
-Task execution concurrency can be controlled at two levels:
-local (per-instance) and global (cluster-wide).
+## Increase background throughput
 
-For a detailed explanation, refer to the
-[durable execution design doc](../../concepts/architecture/design/durable-execution.md#concurrency-control).
+The durable execution engine exposes three levers for background throughput, each addressing a different
+symptom. For the model behind them, see
+[Concurrency control](../../concepts/architecture/design/durable-execution.md#concurrency-control).
 
-### Local (worker concurrency)
+!!! warning "More concurrency does not necessarily mean more throughput"
+    Dependency-Track targets throughput, and the engine leans heavily on (micro-)batching to amortize
+    database round-trips. Past a workload-specific sweet spot, more concurrency can hurt throughput:
+    threads compete for the same database connections, locks, and CPU, and batches shrink as work spreads
+    across them. Raise `max-concurrency` only when metrics show the workload starving for capacity, and
+    verify throughput improves after each change.
 
-Each worker limits how many tasks it processes concurrently per instance.
-Isolated task queues prevent one workload from starving others.
-
-For example, to increase vulnerability analysis concurrency to 20:
+**Worker concurrency.** When one workload saturates its worker (for example, vulnerability analysis) while
+others have headroom, raise that worker's `max-concurrency` on worker nodes:
 
 ```ini
 dt.dex-engine.activity-worker.vuln-analysis.max-concurrency=20
 ```
 
-For all available workers, queues, and their defaults, see the
-[dex engine reference](../../reference/configuration/dex-engine.md#workers).
+For the full list of workers and their defaults, see the
+[durable execution engine reference](../../reference/configuration/dex-engine.md#workers).
 
-### Global (queue capacity)
+**Queue capacity.** When ingestion is outpacing processing across the cluster (queue depths grow unbounded
+under sustained load), lower the queue's capacity to apply backpressure. Once a queue hits capacity, the
+scheduler pauses task creation, propagating throttling back to BOM upload clients.
 
-Task queue capacity limits how many tasks can be pending across the entire cluster.
-When a queue reaches capacity, the scheduler provides backpressure by pausing
-new task creation.
+Change capacity at runtime from the administrator panel under *Workflows → Task Queues*, or via the REST
+API. Defaults live in the [task queues reference](../../reference/configuration/dex-engine.md#task-queues).
 
-Queue capacity is modifiable at runtime in the administrator panel under *Workflows* -> *Task Queues*,
-or via REST API. For default capacities, see the
-[dex engine reference](../../reference/configuration/dex-engine.md#task-queues).
+**Lower-level engine tuning.** When metrics show write-buffer flush latency, run-history cache misses, or
+notification outbox lag, the engine exposes more knobs. See the
+[`dt.dex-engine.*`](../../reference/configuration/properties.md#dtdex-enginetask-event-bufferflush-interval-ms)
+and
+[`notification.outbox-relay.*`](../../reference/configuration/properties.md#dtnotificationoutbox-relaypoll-interval-ms)
+properties.
 
-## Vertical scaling
+## Pool connections centrally
 
-Allocate more CPU and memory to containers. The default JVM options are set
-via the `JAVA_OPTIONS` environment variable:
+- **Up to roughly 5 instances** at the default pool size of 30: the per-instance pool works.
+- **Beyond that:** switch to a centralized pooler such as PgBouncer and turn off local pooling. Many
+  instances each maintaining their own pool inflates database connection count past PostgreSQL's
+  `max_connections` faster than vertical Postgres scaling can keep up.
 
-```text linenums="1"
--XX:+UseG1GC
--XX:+UseStringDeduplication
--XX:+UseCompactObjectHeaders
--XX:MaxGCPauseMillis=250
--XX:MaxRAMPercentage=80.0
-```
+[Provision compute and database](deploying-to-production.md#provision-compute-and-database) covers the
+`max_connections` math.
 
-`-XX:MaxRAMPercentage=80.0` allows the JVM heap to use up to 80% of the container's
-available memory. The remaining 20% covers off-heap memory, thread stacks, and the OS.
+For pool properties, see
+[Data sources](../../reference/configuration/datasources.md#connection-pool-properties). For the PgBouncer
+setup, see [Centralised connection pooling](configuring-database.md#centralised-connection-pooling).
 
-Additional flags can be passed via `EXTRA_JAVA_OPTIONS` without overriding the defaults:
+## Scale vertically
+
+Add memory before adding instances when large BOMs push GC pressure up. Add CPU when worker throughput
+plateaus despite headroom in concurrency settings.
+
+To override JVM defaults without replacing them, extend `EXTRA_JAVA_OPTIONS`. For example, to tighten the
+GC pause target for latency-sensitive frontend traffic:
 
 ```ini
 EXTRA_JAVA_OPTIONS="-XX:MaxGCPauseMillis=100"
 ```
 
-More CPU benefits worker throughput; more memory benefits caching and large BOM processing.
+For the shipped JVM defaults and their meaning, see
+[JVM options](../../reference/configuration/application.md#jvm-options).
 
-## dex engine tuning
+## Isolate the engine database
 
-### Buffers
-
-The durable execution engine batches write operations to reduce database round-trips.
-Increasing flush intervals and batch sizes improves throughput at the cost of
-higher end-to-end latency. Should generally not be modified unless evidence suggests
-that the defaults are problematic.
-
-Refer to the buffer properties in the
-[configuration reference](../../reference/configuration/properties.md#dtdex-enginetask-event-bufferflush-interval-ms).
-
-### Run history cache
-
-Workflow run event histories are cached in memory to avoid redundant database reads
-during replay. Increase `max-size` on worker nodes with high workflow concurrency
-to trade memory for reduced database load.
-
-Refer to [`dt.dex-engine.run-history-cache.*`](../../reference/configuration/properties.md#dtdex-enginerun-history-cachemax-size).
-
-### Maintenance
-
-The maintenance worker periodically deletes completed workflow runs.
-At high volume, completed runs accumulate and can increase vacuum and WAL pressure.
-Shortening retention or increasing batch size can help keep the database lean.
-
-Refer to [`dt.dex-engine.maintenance.*`](../../reference/configuration/properties.md#dtdex-enginemaintenancerun-retention-duration).
-
-### Notification outbox relay
-
-The outbox relay polls for pending notifications and submits them for publishing.
-Increase `batch-size` for high notification volume, or decrease `poll-interval-ms`
-for lower latency.
-
-Refer to [`notification.outbox-relay.*`](../../reference/configuration/properties.md#dtnotificationoutbox-relaypoll-interval-ms).
-
-## Separate database for dex
-
-By default, the durable execution engine uses the app database
-([`dt.dex-engine.datasource.name`](../../reference/configuration/properties.md#dtdex-enginedatasourcename)`=default`). For larger deployments, pointing dex
-at a separate PostgreSQL instance isolates its queue vacuuming and WAL activity
-from the main app database.
+Point the durable execution engine at a separate PostgreSQL server once its queue vacuuming and WAL activity
+start competing with the main database for I/O or autovacuum bandwidth. By default the engine shares the
+main Dependency-Track database
+([`dt.dex-engine.datasource.name`](../../reference/configuration/properties.md#dtdex-enginedatasourcename)`=default`).
 
 ```ini
-# Configure a separate data source for dex
-dt.datasource.dex.url=jdbc:postgresql://dex-postgres:5432/dex
-dt.datasource.dex.username=dex
-dt.datasource.dex.password=dex
-dt.datasource.dex.pool.enabled=true
-dt.datasource.dex.pool.max-size=10
+# Configure a separate data source for the engine.
+dt.datasource.engine.url=jdbc:postgresql://engine-postgres:5432/engine
+dt.datasource.engine.username=engine
+dt.datasource.engine.password=engine
+dt.datasource.engine.pool.enabled=true
+dt.datasource.engine.pool.max-size=10
 
-# Point dex at the separate data source
-dt.dex-engine.datasource.name=dex
+# Point the engine at the separate data source.
+dt.dex-engine.datasource.name=engine
 ```
 
-Refer to [Data Sources](../../reference/configuration/datasources.md) for full data source configuration.
+The engine manages its own schema and does not need to share the main database cluster. For full data source
+configuration, see [Data sources](../../reference/configuration/datasources.md).
 
-!!! note
-    The durable execution engine manages its own schema.
-    It does not need to share the main database cluster.
+## Tune the database
 
-## Connection pooling
-
-Each instance maintains a local connection pool. The default maximum pool size
-is **20** ([`dt.datasource.pool.max-size`](../../reference/configuration/properties.md#dtdatasourcepoolmax-size)). When increasing worker concurrency,
-ensure the pool is large enough to support the combined load of API requests
-and background processing.
-
-- **1-5 instances**: Local connection pooling (the default) is sufficient.
-- **5+ instances**: Consider centralised pooling (for example, PgBouncer) and turn off local pooling.
-- Ensure PostgreSQL's `max_connections` accounts for the sum of all pools.
-
-Refer to [Data Sources](../../reference/configuration/datasources.md#connection-pool-properties) for pool properties,
-and [Centralised connection pooling](configuring-database.md#centralised-connection-pooling) for PgBouncer setup.
-
-## Database tuning
-
-PostgreSQL tuning (autovacuum, WAL compression, `shared_buffers`, etc.) can
-impact performance at scale. Refer to [Configuring the database](configuring-database.md)
-for tuning recommendations.
+PostgreSQL tuning (autovacuum, WAL compression, `shared_buffers`, and similar settings) often matters more
+than tuning Dependency-Track itself at scale. See
+[Configuring the database](configuring-database.md#advanced-tuning) for recommendations.
